# OpenGLScene

./: .gitignore  CMakeLists.txt  Readme.md
src/: CMakeLists.txt  Camera.cpp  Camera.h  ConstantMaterial.cpp  ConstantMaterial.h  CubeMesh.cpp  CubeMesh.h  ExtraOperators.h  Main.cpp  MainWindow.cpp  MainWindow.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  OBJLoader.cpp  OBJLoader.h  ObjectMesh.cpp  ObjectMesh.h  README.txt  SceneObject.cpp  SceneObject.h  ShaderProgram.cpp  ShaderProgram.h  SkyboxMaterial.cpp  SkyboxMaterial.h  TextureMaterial.cpp  TextureMaterial.h  Transform.cpp  Transform.h  basicShader.frag  basicShader.vert  constantShader.frag  constantShader.vert  imgui.ini  skydome.frag  skydome.vert  textureShader.frag  (+2 more)
